--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -24,11 +24,13 @@
 			</div>
 		</form>
 
+		{{#hasOneOrMoreNumbers}}
 		<div>
 			<form method="post" action="/abs">
 				<button>abs</button>
 			</form>
 		</div>
+		{{/hasOneOrMoreNumbers}}
 		
 		{{#hasTwoOrMoreNumbers}}
 		<div>
@@ -39,6 +41,21 @@
 		<div>
 			<form method="post" action="minus">
 				<button>-</button>
+			</form>
+		</div>
+		<div>
+			<form method="post" action="/divide">
+				<button>/</button>
+			</form>
+		</div>
+		<div>
+			<form method="post" action="/multiply">
+				<button>x</button>
+			</form>
+		</div>
+		<div>
+			<form method="post" action="/exp">
+				<button>x<sup>y</sup></button>
 			</form>
 		</div>
 		{{/hasTwoOrMoreNumbers}}
