--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -66,6 +66,14 @@
 			</form>
 		</div>
 		{{/hasUndoer}}
+		
+		{{#hasRedoer}}
+		<div>
+			<form method="post" action="/redo">
+				<button>Redo</button>
+			</form>
+		</div>
+		{{/hasRedoer}}
 	</div>
 	
 	<div class="stack-holder">
