Add an example of static.

--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -93,6 +93,18 @@
 			</form>
 		</div>
 		{{/hasRedoer}}
+		
+		<h1>Stupid Math</h1>
+		<div>
+			<form method="post" action="/stupid-pi">
+				<button>Indiana PI</button>
+			</form>
+		</div>
+		<div>
+			<form method="post" action="/stupid-circle">
+				<button>Indiana Circle Area</button>
+			</form>
+		</div>
 	</div>
 	
 	<div class="stack-holder">
